--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "CenteredDifferences"
 uuid = "c90fe1c6-2f96-401d-ae77-e500ce532cc4"
 authors = ["Louie SLocombe"]
-version = "1.0.0-DEV"
+version = "1.0.0"
 
 [deps]
 BandedMatrices = "aae01518-5342-5314-be14-df237901396f"
