--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "CenteredDifferences"
 uuid = "c90fe1c6-2f96-401d-ae77-e500ce532cc4"
-authors = ["Louie SLocombe"]
+authors = ["Louie Slocombe"]
 version = "1.0.0"
 
 [deps]
@@ -12,6 +12,9 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 julia = "1.8"
+BandedMatrices = "0.17"
+SciMLBase = "1.91"
+StaticArrays = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
